Fix shuttle schedule scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -121,6 +121,12 @@ All colors MUST be HSL.
 
   body {
     @apply bg-background text-foreground;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  
+  body::-webkit-scrollbar {
+    display: none;
   }
 }
 
